--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -11,7 +11,7 @@ fastfetch --config hyde/*.jsonc
   "logo": {
     "source": "\"$(fastfetch.sh logo --os)\"",
     "height": 15,
-    "width": 30,
+    "width": 40,
     "padding": {
         "top": 6,
         "left": 3
@@ -26,36 +26,42 @@ fastfetch --config hyde/*.jsonc
       "format": "\u001b[90m┌────────────────────────Hardware────────────────────────┐"
     },
     {
+      "type": "chassis",
+      "key": "  󰇺 Chassis",
+      "format": "{1} {2} {3}",
+      "keyColor": "green"
+    },
+    {
       "type": "host",
-      "key": "   PC ",
+      "key": "   PC",
       "keyColor": "green"
     },
     {
       "type": "cpu",
       "format": "{name} @ {freq-max}",
-      "key": "   CPU ",
+      "key": "   CPU",
       "keyColor": "green"
     },
     {
       "type": "cpu",
       "format": "{cores-physical}C/{cores-logical}T",
-      "key": "   CPU Cores ",
+      "key": "   CPU Cores",
       "keyColor": "green"
     },
     {
       "type": "gpu",
       "format": "{vendor} {name} ({driver})",
-      "key": "  󰊴 GPU ",
+      "key": "  󰊴 GPU",
       "keyColor": "green"
     },
     {
       "type": "memory",
-      "key": "   Memory ",
+      "key": "  󰘚 Memory",
       "keyColor": "green"
     },
     {
       "type": "disk",
-      "key": "   Disk ",
+      "key": "   Disk",
       "folders": "/",
       "keyColor": "green",
       "format": "{size-used} / {size-total} ({size-percentage})"
@@ -76,48 +82,48 @@ fastfetch --config hyde/*.jsonc
     },
     {
       "type": "kernel",
-      "key": "    ├ Kernel ",
+      "key": "    ├ Kernel",
       "format": "{sysname} {#2}[v{release}]",
       "keyColor": "yellow"
     },
     {
       "type": "bios",
-      "key": "    ├ Bios ", 
+      "key": "    ├󰍛 Bios", 
       "keyColor": "yellow"
     },
     {
       "type": "packages",
-      "key": "    ├󰏖 Packages ",
+      "key": "    ├󰏖 Packages",
       "keyColor": "yellow"
     },
     {
       "type": "shell",
-      "key": "    └ Shell ",
+      "key": "    └ Shell",
       "keyColor": "yellow"
     },
     {
       "type": "de",
-      "key": "    ├ DE ",
+      "key": "    ├󰈸 DE",
       "keyColor": "blue"
     },
     {
       "type": "lm",
-      "key": "    ├ LM ",
+      "key": "    ├ LM",
       "keyColor": "blue"
     },
     {
       "type": "wm",
-      "key": "    ├ WM ",
+      "key": "    ├󰌶 WM",
       "keyColor": "blue"
     },
     {
       "type": "wmtheme",
-      "key": "    ├󰉼 WM Theme ",
+      "key": "    ├󰉼 WM Theme",
       "keyColor": "blue"
     },
     {
       "type": "terminal",
-      "key": "    └ Terminal ",
+      "key": "    └ Terminal",
       "keyColor": "blue"
     },
     {
