--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -51,17 +51,23 @@ font-family-bold = "Hack Nerd Font"
 font-family-italic = "Hack Nerd Font Mono"
 font-family-bold-italic = "Hack Nerd Font Mono"
 font-size = 10
+font-style = medium
+bold-is-bright = true
 adjust-underline-position = 4
 
 # Mouse
 mouse-hide-while-typing = true
 mouse-scroll-multiplier = 2
 
+# Cursor
+cursor-invert-fg-bg = true
+cursor-style-blink = false
+cursor-style = block
+
 # Theme
 adjust-cell-height = 34%
-cursor-style = block
-cursor-invert-fg-bg = true
 background-opacity = 0.9
+background-blur-radius = 15
 window-theme = ghostty
 
 # keybindings
@@ -90,12 +96,21 @@ keybind = super+shift+w=close_surface
 gtk-single-instance = true
 gtk-tabs-location = bottom
 gtk-wide-tabs = false
+initial-window = true
+resize-overlay = never
 window-padding-y = 2,0
 window-padding-balance = true
 window-decoration = false
 window-colorspace = "display-p3"
 window-save-state = always
+window-step-resize = false
 
 # Other
+auto-update = check
+auto-update-channel = stable
+quit-after-last-window-closed = true
+confirm-close-surface = false
 copy-on-select = clipboard
+app-notifications = no-clipboard-copy
+clipboard-trim-trailing-spaces = true
 shell-integration-features = no-cursor,sudo,no-title
