--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -21,6 +21,7 @@ $python\
 $terraform\
 [](fg:#212736 bg:#1d2230)\
 $time\
+$battery\
 [](fg:#1d2230)\
 \n$character"""
 
@@ -141,6 +142,25 @@ disabled    = false
 time_format = "%R" # Hour:Minute Format
 style       = "bg:#1d2230"
 format      = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
+
+[battery]
+full_symbol        = "🔋"
+charging_symbol    = "🔌"
+discharging_symbol = "⚡"
+format             = '[ $symbol $percentage](fg:#a0a9cb bg:#1d2230)'
+
+# battery warning
+[[battery.display]]
+threshold = 10
+style = "bold red"
+
+[[battery.display]]
+threshold = 30
+style = "bold yellow"
+
+[[battery.display]]
+threshold = 50
+style = "bold green"
 
 [deno]
 symbol         = ""
