--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -144,7 +144,7 @@ style       = "bg:#1d2230"
 format      = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
 
 [battery]
-full_symbol        = ""
+full_symbol        = "󰁹"
 charging_symbol    = ""
 discharging_symbol = "󱐋"
 format             = '[ $symbol $percentage](fg:#a0a9cb bg:#1d2230)'
