--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -50,7 +50,7 @@ gestures {
 exec-once = [workspace 1] zen-browser
 exec-once = [workspace 3] ghostty
 exec-once = [workspace 8] signal-desktop
-exec-once = [workspace 9] spotify
+exec-once = [workspace 9] cider
 
 # // █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█ █▀
 # // █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄ ▄█
