--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -70,19 +70,23 @@ background-opacity = 0.9
 background-blur-radius = 15
 window-theme = ghostty
 
-# keybindings
+# Clipboard
+clipboard-trim-trailing-spaces = true
+copy-on-select = clipboard
+
+# Keybindings
 keybind = clear
 keybind = ctrl+h=goto_split:left
 keybind = ctrl+j=goto_split:bottom
 keybind = ctrl+k=goto_split:top
 keybind = ctrl+l=goto_split:right
+keybind = performable:ctrl+c=copy_to_clipboard
+keybind = performable:ctrl+v=paste_from_clipboard
 keybind = super+shift+t=new_tab
 keybind = super+shift+h=previous_tab
 keybind = super+shift+l=next_tab
 keybind = super+shift+comma=move_tab:-1
 keybind = super+shift+period=move_tab:1
-keybind = super+shift+c=copy_to_clipboard
-keybind = super+shift+v=paste_from_clipboard
 keybind = super+shift+enter=new_split:auto
 keybind = super+shift+i=inspector:toggle
 keybind = super+shift+m=toggle_split_zoom
@@ -105,12 +109,12 @@ window-colorspace = "display-p3"
 window-save-state = always
 window-step-resize = false
 
-# Other
+# Updates
 auto-update = check
 auto-update-channel = stable
+
+# Other
 quit-after-last-window-closed = true
 confirm-close-surface = false
-copy-on-select = clipboard
 app-notifications = no-clipboard-copy
-clipboard-trim-trailing-spaces = true
 shell-integration-features = no-cursor,sudo,no-title
