updated waybar & workspaces

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -47,10 +47,13 @@ gestures {
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # // █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
-exec-once = [workspace 1] zen-browser
+exec-once = [workspace 2] code
 exec-once = [workspace 3] ghostty
+exec-once = [workspace 4] ghostty -e k9s
+exec-once = [workspace 5] zen-browser
 exec-once = [workspace 8] signal-desktop
 exec-once = [workspace 9] cider
+exec-once = [workspace 10] betterbird
 
 # // █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█ █▀
 # // █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄ ▄█
