--- a/.config/hypr/hyde.conf
+++ b/.config/hypr/hyde.conf
@@ -27,10 +27,10 @@
 # █▀█ █▀▀ █▀▀ ▄█
 
 # $QUICKAPPS = # used for quick app launcher
-$BROWSER = zen-browser # default browser, if commented out , will use the default browser
+# $BROWSER = firefox # default browser, if commented out , will use the default browser
 # $EDITOR = code # default editor, if commented out , will use the default editor
 # $EXPLORER= dolphin # default file manager, if commented out , will use the default file manager
-$TERMINAL = ghostty # default terminal, if commented out , will use the org.gnome.desktop.default-applications.terminal
+# $TERMINAL = kitty # default terminal, if commented out , will use the org.gnome.desktop.default-applications.terminal
 # $LOCKSCREEN=hyprlock # default lockscreen, you can use any lockscreen you want, eg swaylock
 # $IDLE=hypridle # default idle manager, you can use any idle manager you want,eg swayidle
 
