--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -80,6 +80,7 @@ $d=[$l|Apps]
 bindd = $mainMod, T, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod Alt, T, $d dropdown terminal , exec, [float; move 20% 5%; size 60% 60%] $TERMINAL
 bindd = $mainMod, F, $d file explorer , exec, $EXPLORER
+bindd = $mainMod, N, $d neovim , exec, $TERMINAL -e nvim
 bindd = $mainMod, C, $d text editor , exec, $EDITOR
 bindd = $mainMod, B, $d web browser , exec, $BROWSER
 bindd = Control Shift, Escape, $d system monitor , exec, $scrPath/sysmonlaunch.sh
